tests/baselines/reference/propertyAccess5.errors.txt
tests/cases/compiler/propertyAccess5.ts(1,1): error TS18050: The value 'undefined' cannot be used here.


==== tests/cases/compiler/propertyAccess5.ts (1 errors) ====
    undefined.toBAZ();
    ~~~~~~~~~
!!! error TS18050: The value 'undefined' cannot be used here.